Layout bugs resolved.

--- a/css/daisy.css
+++ b/css/daisy.css
@@ -1,7 +1,3 @@
-/* #cards div {
-  flex-basis: 7%;
-} */
-
 .faceDown {
   background-image: url(../assets/bg.svg);
   background-size: 30%;
@@ -16,71 +12,3 @@
 .notVisible {
   visibility: hidden;
 }
-
-/* THERE HAS TO BE A SMARTER WAY OF MAKING THE TILES RESPONSIVE */
-
-/* @media (max-aspect-ratio: .4) {
-  #cards div {
-      flex-basis: 20%;
-  }
-}
-
-@media (min-aspect-ratio: .4) and (max-aspect-ratio: .5) {
-  #cards div {
-      flex-basis: 18%;
-  }
-}
-
-@media (min-aspect-ratio: .5) and (max-aspect-ratio: .6) {
-  #cards div {
-      flex-basis: 17%;
-  }
-}
-
-@media (min-aspect-ratio: .6) and (max-aspect-ratio: .7) {
-  #cards div {
-      flex-basis: 15%;
-  }
-}
-
-@media (min-aspect-ratio: .7) and (max-aspect-ratio: .8) {
-  #cards div {
-      flex-basis: 13%;
-  }
-}
-
-@media (min-aspect-ratio: .8) and (max-aspect-ratio: .9) {
-  #cards div {
-      flex-basis: 13%;
-  }
-}
-
-@media (min-aspect-ratio: .9) and (max-aspect-ratio: 1.1) {
-  #cards div {
-      flex-basis: 11%;
-  }
-}
-
-@media (min-aspect-ratio: 1.1) and (max-aspect-ratio: 1.3) {
-  #cards div {
-      flex-basis: 9%;
-  }
-}
-
-@media (min-aspect-ratio: 1.3) and (max-aspect-ratio: 1.7) {
-  #cards div {
-      flex-basis: 8%;
-  }
-}
-
-@media (min-aspect-ratio: 1.7) and (max-aspect-ratio: 2.1) {
-  #cards div {
-      flex-basis: 8%;
-  }
-}
-
-@media (min-aspect-ratio: 2.1) {
-  #cards div {
-      flex-basis: 11%;
-  }
-} */
